--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#" id="home">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#home1" id="home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="about">About Me</a>
+                        <a class="nav-link" href="#about1" id="about">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="edu">Education</a>
+                        <a class="nav-link" href="#edu1" id="edu">Education</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="por">Portofolio</a>
+                        <a class="nav-link" href="#por1" id="por">Portofolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="con">Contact</a>
+                        <a class="nav-link" href="#con1" id="con">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -52,7 +52,7 @@
             </div>
             <div class="col-md-6">
                 <div class="jumbotron">
-                    <h1 class="display-4" style="color: #007BFF; font-weight: bold; margin-top: 20px;">Hallo 👋</h1>
+                    <h1 class="display-4" style="color: #007BFF; font-weight: bold; margin-top: 20px;" id="home1">Hallo 👋</h1>
                     <p class="lead"><strong>Saya adalah Ahmad Amin Amrullah. Saya mahasiswa SIB Bacth 5 dari Universitas
                             Jember.</strong></p>
                     <hr class="my-4">
@@ -67,7 +67,7 @@
 
     <!-- about me -->
     <div class="container" style="margin-top: 100px;">
-        <h1 style="text-align: center;">ABOUT ME</h1><br>
+        <h1 style="text-align: center;" id="about1">ABOUT ME</h1><br>
         <p style="font-size: 10; text-align: center;">Hello! Let me introduce myself. I'm Ahmad Amin Amrullah, a
             sixth-semester student majoring in Computer Science at the University of Jember. I'm an enthusiastic
             individual when it comes to the world of technology, particularly in web development.</p>
@@ -75,7 +75,7 @@
 
     <!-- Education -->
     <div style="margin-top: 100px;">
-        <h1 style="text-align: center;">EDUCATION</h1><br>
+        <h1 style="text-align: center;" id="edu1">EDUCATION</h1><br>
         <div class="container text-left">
             <div class="row justify-content-center text-center">
                 <div class="col-6 col-sm-4 p-3"><i class="fas fa-school"
@@ -93,7 +93,7 @@
         </div>
     </div>
 
-    <div class="container" style="margin-top: 100px;">
+    <div class="container" style="margin-top: 100px;" id="por1">
         <h1 style="text-align: center;">PORTOFOLIO</h1>
         <h5 style="margin-top: 20px;"><strong>Proyek Frontend Laravel: UNEFF 2023</strong></h5>
         <p>Proyek ini adalah salah satu pencapaian saya dalam pengembangan frontend website. Dalam proyek ini, saya
@@ -114,7 +114,7 @@
     </div>  
 
     <!-- Contact -->
-    <div style="margin-top: 100px;">
+    <div style="margin-top: 100px;" id="con1">
         <h1 style="text-align: center;">CONTACT ME</h1>
         <div style="display: flex; align-items: center; margin-left: 150px; margin-top: 10px;">
             <ion-icon name="location-outline" style="font-size: 40px; color: blue;"></ion-icon>
